feat: Add __pycache__ to .gitignore

--- a/01_teams_bot/src/requirements.txt
+++ b/01_teams_bot/src/requirements.txt
@@ -1,7 +1,8 @@
 botbuilder-core
 botbuilder-schema
-botbuilder-integration-flask
 python-dotenv
 google-generativeai
 Flask
 gunicorn
+aiohttp
+flask[async]
