--- a/01_teams_bot/src/.env
+++ b/01_teams_bot/src/.env
@@ -1,3 +1,4 @@
 MicrosoftAppId=YOUR_MICROSOFT_APP_ID
 MicrosoftAppPassword=YOUR_MICROSOFT_APP_PASSWORD
+ValidDomains=your-server-domain.com
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY
